# LocalBooster

./: .gitignore  LICENSE  LOCALBOOSTER_BLUEPRINT.md  MODEL_BENCHMARK_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: MLX_BACKEND_NOTES.md
examples/benchmarks/: README.md  gsm8k_mini.jsonl  math500_mini.jsonl  smoke_coding.jsonl  smoke_reasoning.jsonl
experiments/: README.md
experiments/gsm8k_mini_clean3_model_compare_2026_06_30/: README.md
experiments/gsm8k_mini_clean3_model_compare_2026_06_30/data/: model_compare.csv  model_compare.json
experiments/gsm8k_mini_clean3_qwen3_0_6b_mlx_t128_2026_06_30/: README.md
experiments/gsm8k_mini_clean3_qwen3_1_7b_mlx_t128_2026_06_30/: README.md
experiments/math500_mini_qwen3_0_6b_mlx_t192_2026_06_30/: README.md
experiments/qwen3_0_6b_mlx_smoke_2026_06_30/: README.md
experiments/qwen3_0_6b_mlx_smoke_scaling_2026_06_30/: README.md
experiments/qwen3_0_6b_mlx_smoke_t32_2026_06_30/: README.md
experiments/qwen3_0_6b_mlx_smoke_t64_2026_06_30/: README.md
localbooster/: __init__.py  cli.py  config.py  evaluation.py  generation.py  metrics.py
localbooster/backends/: __init__.py  base.py  errors.py  mlx_backend.py  registry.py  transformers_backend.py
localbooster/sampling/: __init__.py  base.py  power.py  standard.py
tests/: __init__.py  test_cli.py  test_config.py  test_evaluation.py  test_metrics.py  test_sampling.py
tools/: build_experiment_report.py  build_model_compare_report.py  build_scaling_report.py  prepare_gsm8k_dataset.py  prepare_math500_dataset.py  rescore_results.py
(+20 files in other folders)
