[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "localbooster"
version = "0.1.0"
description = "Training-free inference-time booster experiments for local language models."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Ferdinand Bons" }
]
keywords = ["llm", "local", "sampling", "mlx", "transformers", "reasoning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
transformers = [
  "torch>=2.2",
  "transformers>=4.45",
]
mlx = [
  "mlx>=0.20",
  "mlx-lm>=0.20",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
localbooster = "localbooster.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["localbooster"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
